# arg-parser

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
demos/: CMakeLists.txt  README.md
doc/: api-plan.md  api-reference.md  config.doxygen
tests/: CMakeLists.txt  test-arg-error.cpp  test-check-flag-and-read-value.cpp  test-check-flag.cpp  test-counts.cpp  test-defs.h  test-defs.hpp  test-errors.cpp  test-flag.cpp  test-list.cpp  test-manual-help.cpp  test-operator.cpp  test-parser.cpp  test-runner.cpp  test-value.cpp  test.cpp  test.h  test.hpp  unittest.cpp
tests/api/: test-api-add.cpp  test-api-arg-struct.cpp  test-api-check-and-read.cpp  test-api-check-flag-and-read-value.cpp  test-api-check-flag.cpp  test-api-check.cpp  test-api-constructors.cpp  test-api-def.cpp  test-api-flag-struct.cpp  test-api-operator.cpp  test-api-parser.cpp  test-api-value-struct.cpp  test-api.h  test-api.hpp
tests/manual/: test-manual-error.cpp  test-manual-help.cpp  test-manual.h  test-manual.hpp
tests/unit/: CMakeLists.txt  test-arg-error.cpp  test-flag.cpp  test-manual-help.cpp  unittest.cpp
tests/unit-and-behavior/: test-errors.cpp  test-flag.cpp  test-unit-add.cpp  test-unit-arg-struct.cpp  test-unit-check-and-read.cpp  test-unit-check-flag-and-read-value.cpp  test-unit-check-flag.cpp  test-unit-check.cpp  test-unit-constructors.cpp  test-unit-counts.cpp  test-unit-def.cpp  test-unit-errors.cpp  test-unit-flag-struct.cpp  test-unit-operator.cpp  test-unit-options.cpp  test-unit-parser.cpp  test-unit-value-struct.cpp  test-unit.h  test-unit.hpp  test-value.cpp
(+18 files in other folders)
